# dj-easy-xls

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
src/dj_easy_xls/: __init__.py  main.py
src/dj_easy_xls.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
