[metadata]
name = dj-easy-xls
version = 0.0.1
author = Roshan Shrestha
author_email = roshanshrestha01@gmail.com
description = Easy package with helpful method to use openpyxl
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/roshanshrestha01/dj-easy-xls
project_urls =
    Bug Tracker = https://github.com/roshanshrestha01/dj-easy-xls/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src